tests/models/struct/unnamed/u64/fail/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1.0)]
    u64
);
fn main() {}
